# asc-game-server

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp
src/: main.cpp
src/static/: html.html
test/: CMakeLists.txt
test/source/: asc-game-server_test.cpp
